# kvm-manager

./: .gitignore  CURRENT_STATUS.md  DEPLOY_ISO.sh  DESKTOP_UI_REDESIGN.md  FEATURE_STATUS.md  KVM_MANAGER_FEATURE_PARITY_GAMEPLAN.md  LIBVIRT_PERMISSIONS.md  PHASE3_COMPLETE.md  PROJECT_PLAN.md  README.md  TODO.md  build-novnc.mjs  build-spice.mjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.agents/: architecture-agent.md  backend-agent.md  devops-agent.md  frontend-agent.md  guest-agent.md  project-coordinator.md
.agents/decisions/: 001-frontend-stack.md  002-state-management.md  003-module-structure.md
.agents/integration/: event-schema.md  tauri-commands.md  vm-cloning.md
.agents/status/: STATUS-TEMPLATE.md  architecture-status.md  backend-status.md  frontend-status.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
archive/: AGENTS.md
archive/2025-12-12/: BACKEND_SETUP.md  DEPLOYMENT_REPORT.md  DEVOPS_STATUS.md  ENHANCED_VM_LIST.md  FEATURE_STATUS.md  PHASE4_KICKOFF.md  PHASE4_STATUS_UPDATE.md  PHASE4_TESTING_PLAN.md  PROJECT_COORDINATOR_STATUS.md  QUICK_DEPLOY.md  VIRT_MANAGER_FEATURE_PARITY.md  WEEK1_AND_2_COMPLETION_STATUS.md  WEEK2_MULTI_WINDOW_SUMMARY.md  WEEK3_HARDWARE_TREE_SUMMARY.md  WEEK3_VERIFICATION_REPORT.md  WEEK4_COMPLETE.md  WEEK4_DAY1_COMPLETION.md  WEEK4_DAY2_PROGRESS.md  WEEK4_DAY3_FINAL.md  WEEK4_IMPLEMENTATION_PLAN.md  WEEK4_STATUS.md  WEEK4_TESTING_CHECKLIST.md  WEEK5_DAY1_COMPLETE.md  WEEK5_DAY2_COMPLETE.md  WEEK5_DAY3_TESTING_GUIDE.md  WEEK5_FINAL_COMPLETION_REPORT.md  WEEK5_IMPLEMENTATION_PLAN.md  WEEK5_NEXT_STEPS.md  WEEK5_STATUS.md
docs/: CONSOLE_USER_GUIDE.md  UEFI_SETUP.md  UI_ARCHITECTURE.md
guest-agent/: COMPREHENSIVE_TEST_PLAN.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  INSTALL.md  PROGRESS.md  PROTOCOL.md  README.md  TESTING.md  TESTING_CHECKLIST.md  TESTING_ISSUES_AND_RISKS.md  build-agent-iso-v2.sh  build-agent-iso.sh  install-alpine.sh  setup-test-vm.sh
guest-agent/agent-common/: Cargo.toml
guest-agent/agent-common/src/: error.rs  lib.rs  protocol.rs
guest-agent/agent-linux/: Cargo.toml
guest-agent/agent-linux/src/: config.rs  main.rs  transport.rs
guest-agent/agent-linux/src/handlers/: exec.rs  files.rs  mod.rs  power.rs  system.rs
guest-agent/iso-build-linux/: kvmmanager-agent
guest-agent/packaging/: config.json  install-alpine.sh  install-debian.sh  install-rhel.sh  kvmmanager-agent.service
public/: novnc-bundle.js  novnc-loader.js  spice-bundle.js  spice-loader.js
public/spice-html5/: spice.css
src/: App.tsx  main.tsx  novnc.d.ts
src-tauri/: Cargo.toml  TYPESCRIPT_TYPES.md  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  menu.rs  window_state.rs
src-tauri/src/commands/: alert.rs  backup.rs  connection.rs  guest_agent.rs  mdev.rs  metrics.rs  mod.rs  network.rs  nwfilter.rs  optimization.rs  pci.rs  retention.rs  scheduler.rs  serial_console.rs  snapshot.rs  sriov.rs  storage.rs  system.rs  template.rs  usb.rs  vm.rs  window.rs
src-tauri/src/models/: cloud_init.rs  host.rs  mdev.rs  mod.rs  network.rs  nwfilter.rs  pci.rs  snapshot.rs  storage.rs  usb.rs  vm.rs
src-tauri/src/services/: alert_service.rs  backup_service.rs  cloud_init_service.rs  connection_service.rs  guest_agent_service.rs  libvirt.rs  mdev_service.rs  metrics_service.rs  mod.rs  network_service.rs  nwfilter_service.rs  optimization_service.rs  ova_service.rs  pci_service.rs  retention_service.rs  scheduler_service.rs  serial_console_service.rs  snapshot_service.rs  sriov_service.rs  storage_service.rs  template_service.rs  usb_service.rs  vm_service.rs  ws_proxy.rs
src-tauri/src/state/: app_state.rs
src-tauri/src/utils/: error.rs
src/hooks/: useKeyboardShortcuts.ts  useMenuEvents.ts  useTheme.ts  useToolbarActions.ts  useVmEvents.ts  useWindowState.ts
src/lib/: fuzzySearch.ts  tauri.ts  types.ts
src/pages/: Alerts.tsx  Backups.tsx  ConsoleWindow.tsx  Dashboard.tsx  Insights.tsx  NetworkManager.tsx  PerformanceMonitor.tsx  Schedules.tsx  Settings.tsx  StorageManager.tsx  Templates.tsx  (+3 more)
(+75 files in other folders)
