[workspace]
members = ["agent-common", "agent-linux"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["KVM Manager Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/theonlytruebigmac/kvm-manager"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# System info
sysinfo = "0.30"

# Platform-specific (Linux)
nix = { version = "0.27", features = ["fs", "process", "user"] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller binary
