[package]
name = "kvm-manager-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kvm_manager_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
pkg-config = "0.3"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
lazy_static = "1.4"

# WebSocket proxy for VNC
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Libvirt integration
virt = "0.3"
libc = "0.2.178"
portable-pty = "0.9.0"

# OVA/OVF import
tar = "0.4"

