[package]
name = "kvmmanager-agent-linux"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "kvmmanager-agent"
path = "src/main.rs"

[dependencies]
kvmmanager-agent-common = { path = "../agent-common" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# System info
sysinfo = { workspace = true }

# Unix-specific
nix = { workspace = true }

# CLI
clap = { version = "4.4", features = ["derive"] }
